Resolves: tdf#154072 no effect when clicking some dropdown buttons

when toolbar overflows.

A problem since:

commit b534ee2e972711af2dbaadf2190813054adda902
Date:   Tue Nov 22 11:33:23 2022 +0000

    Resolves: tdf#152155 use gtk's knowledge of relative widget positions

    rather than effectively emulate it poorly

Change-Id: I18c08e43e9c0b642f2a30b5114d6f0a53f18a331
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165610
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>